--- a/requirements.txt
+++ b/requirements.txt
@@ -89,3 +89,97 @@ wikipedia==1.4.0
 wrapt==1.11.2
 yellowbrick==1.1
 zipp==3.1.0
+absl-py==0.9.0
+afinn==0.1
+appdirs==1.4.4
+asgiref==3.2.10
+astroid==2.3.3
+astunparse==1.6.3
+beautifulsoup4==4.6.0
+blis==0.4.1
+cachetools==4.1.0
+catalogue==1.0.0
+certifi==2019.11.28
+chardet==3.0.4
+colorama==0.4.3
+conda==4.3.16
+cycler==0.10.0
+cymem==2.0.3
+defusedxml==0.6.0
+distlib==0.3.1
+Django==2.2.14
+django-allauth==0.42.0
+django-debug-toolbar==2.2
+en-core-web-sm==2.2.5
+filelock==3.0.12
+gast==0.3.3
+google-auth==1.17.2
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.29.0
+h5py==2.10.0
+idna==2.9
+importlib-metadata==1.6.0
+isort==4.3.21
+joblib==0.14.1
+JPype1==0.7.2
+Keras==2.3.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+kiwisolver==1.2.0
+konlpy==0.5.2
+lazy-object-proxy==1.4.3
+lxml==4.5.0
+Markdown==3.2.2
+matplotlib==3.2.1
+mccabe==0.6.1
+murmurhash==1.0.2
+nltk==3.4.5
+numpy==1.18.2
+oauthlib==3.1.0
+opt-einsum==3.2.1
+pandas==1.0.3
+Pillow==7.2.0
+plac==1.1.3
+preshed==3.0.2
+protobuf==3.11.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycosat==0.6.3
+pylint==2.4.4
+pyparsing==2.4.6
+PySocks==1.7.1
+python-dateutil==2.8.1
+python3-openid==3.2.0
+pytz==2020.1
+PyYAML==5.3.1
+requests==2.23.0
+requests-oauthlib==1.3.0
+rsa==4.6
+ruamel.yaml==0.16.10
+ruamel.yaml.clib==0.2.0
+scikit-learn==0.22.2.post1
+scipy==1.4.1
+six==1.14.0
+spacy==2.2.4
+sqlparse==0.3.1
+srsly==1.0.2
+tensorboard==2.2.2
+tensorboard-plugin-wit==1.6.0.post3
+tensorflow==2.2.0
+tensorflow-estimator==2.2.0
+termcolor==1.1.0
+textblob==0.15.3
+thinc==7.4.0
+tqdm==4.46.0
+tweepy==3.8.0
+typed-ast==1.4.1
+urllib3==1.25.8
+vaderSentiment==3.3.2
+virtualenv==20.0.25
+wasabi==0.6.0
+Werkzeug==1.0.1
+wikipedia==1.4.0
+wrapt==1.11.2
+yellowbrick==1.1
+zipp==3.1.0
